--- a/teaching.qmd
+++ b/teaching.qmd
@@ -1,13 +1,12 @@
-
 ---
 layout: page
-title: Curriculum Vitae
-excerpt: My Current CV
+title: Teaching
+excerpt: Evidence of Teaching Effectiveness
 engine: knitr 
 resources:
-  - "assets/cv.pdf"
+  - "assets/Joyce_TE.pdf"
 cv:
-  pdf: "assets/cv.pdf"
+  pdf: "assets/Joyce_TE.pdf"
 ---
 
 ```{css echo=FALSE}
@@ -32,7 +31,7 @@ cv:
 ```{=html}
 <p class="text-center">
   <a class="btn btn-primary btn-lg cv-download" href="`r rmarkdown::metadata$cv$pdf`" target="_blank">
-    <i class="fa-solid fa-file-arrow-down"></i>&ensp;Download CV
+    <i class="fa-solid fa-file-arrow-down"></i>&ensp;Download Teaching Effectiveness
   </a>
 </p>
 <div class="embed-container">
