--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: "Conner Joyce"
 pagetitle: "Conner Joyce"
 subtitle: "PhD Candidate,<br>Rice University"
-image: assets/images/head.jpg
+image: assets/images/head.jpeg
 
 about: 
   template: trestles
