--- a/research.qmd
+++ b/research.qmd
@@ -11,7 +11,7 @@ Joyce, Conner. "Do states constrain non-state hackers? International Telecommuni
 
 ## Works in Progress
 
-Joyce, Conner. "Political Action in the Dark Web: Political Mobilization and Radicalization in Illicit Digital Networks."
+Joyce, Conner. "Political Action in the Dark Web: Political Mobilization and Radicalization in Illicit Digital Networks." [(Manuscript)](https://osf.io/preprints/socarxiv/x6yh4_v1){target=_blank}
 
 Joyce, Conner.  "Are cyber-attacks the tools of hawks or doves? Cyber retaliation and US public opinion."
 
