--- a/index.qmd
+++ b/index.qmd
@@ -34,7 +34,7 @@ format:
 
 <div class="h1">Welcome!</div>
 
-I am a PhD candidate in Political Science at Rice University with a focus in International Relations. My research investigates the impact of digital technology on international security. I study how technology can facilitate the emergence of security threats from non-state actors and how state actors can cooperate to mitigate these threats. I leverage original data collection, large-n observational analysis, large language models, machine learning (deep transfer learning), and experimental designs to conduct this research.
+I am a PhD candidate in Political Science at Rice University with a focus in International Relations. Beginning in Fall 2026, I will join the [School of Politics, Economics and Global Affairs at IE University](https://www.ie.edu/school-politics-economics-global-affairs/){target=blank} as an Assistant Professor of Political Science. My research investigates the impact of digital technology on international security. I study how technology can facilitate the emergence of security threats from non-state actors and how state actors can cooperate to mitigate these threats. I leverage original data collection, large-n observational analysis, large language models, machine learning (deep transfer learning), and experimental designs to conduct this research.
 
 I hold a Master's degree in Public Affairs from the University of Texas LBJ School of Public Affairs and a BA in Political Science from Southwestern University.  
 
